<resources>
    <string name="app_name">Harvest Up</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Management">Management</string>
    <string name="menu_Information">Information</string>
    <string name="menu_History">History</string>
    <string name="title_bangus">Bangus</string>
    <string name="title_plapa">Pla-Pla</string>
    <string name="title_apahap">Apahap</string>
    <string name="title_talangka">Talangka</string>
    <string name="title_alimango">Alimango</string>
    <string name="title_sugpo">Sugpo</string>
    <string name="title_vannamei">Vannamei</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_noodles">Noodles</string>
    <string name="title_jako">Jako</string>
    <string name="title_sulib">Sulib</string>
    <string name="title_waffer">Waffer</string>
    <string name="title_Binhian">Binhian</string>
    <string name="title_Kawagan">Kawagan</string>
    <string name="title_Palakihan">Palakihan</string>
    <string name="title_Bintol">Bintol</string>
    <string name="title_Dala">Dala</string>
    <string name="title_Lambat">Lambat</string>
    <string name="title_Paktang">Paktang</string>
    <string name="title_Panti">Panti</string>
    <string name="descBangusEng">Milkfish (Bangus) is a type of fish that is usually poured or placed in the fishpond because it grows quickly compared to other fish. Most of the people who fish, what they usually replace or put in their fishing is Bangus because you can be sure of your income from it.
        \n \n In the 1 hectare size of the fishpond, you cannot put more than 6,000 bangus because if it is too much there is a possibility that it will not grow or the rest of it will die.
        \n \n Reminder : When the months of April and May arrive, you should first catch other pets or reduce the contents of your plaisdaan because the months of April and May are when fish die.
        \n \n  Food : Wafer, Biscuit, Noodles and Feeds.
        \n \n Wafers, biscuits and crushed noodles will be fed when the bangus are still small. When its a bit big, it can be fed with feed. Its only fed in the morning and afternoon every day.
        \n \n How many days of caring it before Harvesting?
        \n In the Nursery : 3 weeks
        \n In the Hatchery : 1 month
        \n In the Growout : 4 months
        \n tools to be used in the harvesting : Panti or net
    </string>
    <string name="descPlaPlaEng">PlaPla is a type of tilapia but it is bigger compared to normal tilapia. It is often kept in fisheries because it lives in salt water but can also live in brackish water. It reaches a size of eight or ten inches or more.
        \n \n In the 1 hectare size of the fishpond, you cant put more than 50,000 Pla-pla in it because if it is too much there is a possibility that it wont grow or the rest of it will die.
        \n \n Reminder : When the months of April and May arrive, you should first catch other pets or reduce the contents of your fishpond because the months of April and May are when fish die.
    \n \n  Food : Waffer at Feeds.
        \n \n Crushed wafers are fed when the tilapia are still small. When it has grown for a month, it can be fed with feed. It is only fed in the morning and afternoon every day.
        \n\n How many days of caring it before Harvesting?
        \n In the Hatchery : 2 weeks
        \n In The Nursery : 1 month
        \n In the Growout : 4 months
        \n Tools use for Harvesting : Panti o lambat
    </string>
    <string name="descApahapEng">Apahap is a fish with white skin. It is often kept in fisheries because it lives in salt water and sea water. This fish grows bigger and bigger if it is cared for during the day, but when it is too big, it will be difficult to buy it because the taste of its flesh will be different.
        \n \n In the 1 hectare size of the fishpond, you cant put more than 10,000 apahap in it because if it is too much there is a possibility that it wont grow or it will eat its fellow fish because of the crowded area.
        \n \n Reminder : When the months of April and May arrive, you should first catch other pets or reduce the contents of your fishpond because the months of April and May are when fish die.
        \n \n Food : waffer , feeds at sulib
        \n \n Crushed wafers will be fed when the apahap are still small. When it is quite big, it can be fed with feeds and subs. It is only fed in the morning and afternoon every day.
        \n \n In the Hatchery : 2 Linggo
        \n In the Nursery: 1 buwan
        \n In the Growout : 4 buwan
        \nTools that use for harvesting : Panti o lambat
    </string>
    <string name="descTalangkaEng">The talangka resembles a crab but it is small. The talangka lives in salt water. It is also called katang. Talangka is one of the most delicious seafood because of its fat or called aligi. Talanka is the most popular especially for making buro or crab paste.
    \n \n  There are only a few people who buy or drop talangka because it is cheap. So those who are left with talangka buds are used in their business of fermentation and so on.
    \n \n In the 1 hectare size of the fishpond, you cant put more than 100,000 Talangka here because if it is too much there is a possibility that it wont grow or the rest of it will die due to overcrowding.
        \n \n Reminder : When the months of April and May arrive, you should first catch other pets or reduce the contents of your fishpond because the months of April and May are when fish die.
        \n \n  Food : Jako, sulib at lumot .
        \n \n Like the crab, the jako, silib and moss can be fed at the same time or even mixed together. Feeding the talangka is every day even if it is still small. When it has grown for two months it can be fed twice a day.
       \n \n How many days of caring it before Harvesting?
        \n In the Hatchery : 2 weeks
        \n In the Nursery : 1 month
        \n In the Growout : 4 months
        \n Tools use for Harvesting : bintol o lambat

</string>
    <string name="descAlimangoEng">The crab is raised in water that can be a mixture of brackish water and salt water but can also be in pure salt water. You can also take care of crabs and milkfish at the same time, but not crabs and prawns because the crabs will eat the prawns when the water starts to shrink and they are side by side.
        \n \n It is also one of the main crops that are harvested or harvested by farmers because when the harvest is good, they can make a lot of money from it.
        \n \n In the 1 hectare size of the fishpond, you cannot put more than 6,000 crabs in it because if it is too much there is a possibility that it will not grow or the rest of it will die.
        \n \n It is also one of the main crops that are harvested or harvested by farmers because when the harvest is good, they can make a lot of money from it.
</string>
    <string name="descSugpoEng"> A shrimp is a type of decapoda with ten legs. Compared to shrimp, it is larger and is usually raised in fisheries because it grows quickly in the fisheries. It is also called tiger shrimp in English. It is also one of the main ones bought or dropped in the street because its price is very high and you will really earn a lot if the harvest is good.
              \n \n In the 1 hectare size of the fishpond, you cannot put more than 50,000 shrimp because if it is too much there is a possibility that it will not grow or the rest of it will die.
             \n \n
    Reminder : When the months of April and May arrive, you should first catch other pets or reduce the contents of your fishpond because the months of April and May are when fish die.
             \n \n Food : Jako, Sulib.
            \n \n Jako and subil can be fed at the same time or even mixed together. Feeding the crab is only three times a week when it is small. When it has grown two months, it can be fed every day.
             \n \n How many days of caring it before Harvesting?
            \n In the Hatchery : 2 weeks
        \n In the Nursery : 1 month
        \n In the Growout : 4 months
        \n Tools use for Harvesting : lambat o paktang</string>
    <string name="descFeedsEng"> Feeds are one of the main foods of fish. Feeds are made of mixed ingredients with nutrients that help grow fish. Feeds are more expensive if you compare them to other fish feeds, but they are stronger and have a better effect on the fish.
               \n \n The feeding of feeds is done with the selection of fish so that they dont go to waste because you cant feed all the fish in the fishpond with feeds.
               \n \n Type of fish on the fishpond that can be fed with Feeds :
               \n Bangus
               \n Apahap
               \n Pla-pla
               </string>
    <string name="descNoodlesEng">Noodles is one of the main fish food in fishpond. The noodles are made from a mixture of ingredients with nutrients that help grow fish. Noodles are cheaper compared to other fish food, but they are stronger and have a better effect on the fish when the fish are still small.
              \n \n The feeding of noodles is done with the selection of fish so that they dont go to waste because not all the fish in the fishpond can be fed with noodles."
              \n \n Kind of fish on the fishpond that can be fed with Noodles :
              \n Bangus
              \n Apahap
              \n Pla-pla

    </string>
    <string name="descJakoEng">Jako is one of the main food of fish in the fishpond especially crab. The jaco is made of small fish that help raise the fish. Jako is more expensive when compared to noodles and wafers because it is stronger and has a better effect on fish.
             \n \n The feeding of the Jako is done with the selection of fish so that they dont go to waste because not all the fish in the fishpond can be fed to the Jako.
             \n \n Type of fish on the fishpond that can be fed by Jako:
             \n Alimango
             \n Sugpo
             \n Vannamei
    </string>
    <string name="descWafferEng">Wafer is one of the main food of fish in the fishpond, especially the seed fish. Waffer is made of thin bread that melts quickly which helps to raise fish. Waffer is expensive if you compare it to noodles because it is stronger and has a better effect on the fish.
                \n \n Waffer feeding is done with a selection of fish so that they dont go to waste because not all fish in the fishpond can be fed with wafers."
                \n \n Type of fish on the fishpond that Waffer can feed :
                \n Bangus
                \n Apahap
                \n Pla-pla

    </string>
    <string name="descPaktangEng">Harvesting fish using a Paktang is one of the most effective and basic tools used by fishermen on the beach, but the use of a hook on the beach has a specific time or usually you can only use it at night because the water in the fishpond usually decreases at night."
        \n \n The Paktang is made of iron screen and it is square shaped and has a door where the fish will enter through the door of the paktang to be caught because it cannot come out when it enters."
        \n \n Here is a sample video Harvesting fish in the fishpond using Paktang. </string>
    <string name="langEN">English</string>
</resources>